Minor fix to clip overflow content in the sidebar.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -309,6 +309,7 @@ header#secondary {
         .font-size-default(.5, .5);
         .text-center;
         padding: .5em 0;
+        overflow: hidden;
         p {
             .font-size-default(0, 0);
             .bulleted-list();
